--- a/views/FAQ.html
+++ b/views/FAQ.html
@@ -73,59 +73,67 @@
                     <ul id="faq-list">
 
                         <li>
-                            <a data-toggle="collapse" class="collapsed" href="#faq1">Innovision <i class="fa fa-minus-circle"></i></a>
+                            <a data-toggle="collapse" class="collapsed" href="#faq1">When is
+                            INNOVISION 18? <i class="fa fa-minus-circle"></i></a>
                             <div id="faq1" class="collapse" data-parent="#faq-list">
                                 <p>
-                                    2019
+                                     Ans. INNOVISION,The annual techno-management festival of NIT Rourkela,will be held from 2nd
+                            to 4th of November.
+
                                 </p>
                             </div>
                         </li>
 
                         <li>
-                            <a data-toggle="collapse" href="#faq2" class="collapsed">Innovision <i class="fa fa-minus-circle"></i></a>
+                            <a data-toggle="collapse" href="#faq2" class="collapsed">How to
+                            register for INNOVISION 18? <i class="fa fa-minus-circle"></i></a>
                             <div id="faq2" class="collapse" data-parent="#faq-list">
                                 <p>
-                                    2018
+                                    Ans. Please go to sign up option for registration
+
                                 </p>
                             </div>
                         </li>
 
                         <li>
-                            <a data-toggle="collapse" href="#faq3" class="collapsed">Innovision <i class="fa fa-minus-circle"></i></a>
+                            <a data-toggle="collapse" href="#faq3" class="collapsed">How much
+                            is the registration fee?<i class="fa fa-minus-circle"></i></a>
                             <div id="faq3" class="collapse" data-parent="#faq-list">
                                 <p>
-                                    2018
+                                   Ans. You will get to know about the fee during registration process.
+
                                 </p>
                             </div>
                         </li>
 
                         <li>
-                            <a data-toggle="collapse" href="#faq4" class="collapsed">Innovision <i class="fa fa-minus-circle"></i></a>
+                            <a data-toggle="collapse" href="#faq4" class="collapsed">Will
+                            there be accommodation provided? <i class="fa fa-minus-circle"></i></a>
                             <div id="faq4" class="collapse" data-parent="#faq-list">
                                 <p>
-                                    2017
+                                    Ans. Yes, accommodation will be provided to the participants in the various halls of
+                            residences located within our campus.
+                            After registering at our desk, our hospitality team would guide the participants to their
+                            allotted
+                            halls.
+
                                 </p>
                             </div>
                         </li>
 
                         <li>
-                            <a data-toggle="collapse" href="#faq5" class="collapsed">Innovision <i class="fa fa-minus-circle"></i></a>
+                            <a data-toggle="collapse" href="#faq5" class="collapsed"> Do we
+                            have to pay entry fee for every events? <i class="fa fa-minus-circle"></i></a>
                             <div id="faq5" class="collapse" data-parent="#faq-list">
                                 <p>
-                                    2016
+                                     Ans. Actually, there are events which have no entry fees but some events have. It differs
+                            for each event.
+
                                 </p>
                             </div>
                         </li>
 
-                        <li>
-                            <a data-toggle="collapse" href="#faq6" class="collapsed">Innovision <i class="fa fa-minus-circle"></i></a>
-                            <div id="faq6" class="collapse" data-parent="#faq-list">
-                                <p>
-                                    2015
-                                </p>
-                            </div>
-                        </li>
-
+                      
                     </ul>
                 </div>
             </div>
