--- a/views/sponsor.html
+++ b/views/sponsor.html
@@ -61,126 +61,296 @@
     <section id="supporters" class="section-with-bg wow fadeInUp">
         <div class="container">
             <div class="section-header">
-                <h2>Sponsors</h2>
+                <h2>SPONSORS</h2>
             </div>
 
             <div class="row no-gutters supporters-wrap clearfix">
 
                 <div class="col-lg-3 col-md-4 col-xs-6">
                     <div class="supporter-logo">
-                        <img src="../assets/images/supporters/1.png" class="img-fluid" alt="">
+                        <img src="../assets/images/supporters/advantedge.jpg" class="img-fluid" alt="">
                     </div>
                 </div>
 
                 <div class="col-lg-3 col-md-4 col-xs-6">
                     <div class="supporter-logo">
-                        <img src="../assets/images/supporters/2.png" class="img-fluid" alt="">
+                        <img src="../assets/images/supporters/challengeRocket.png" class="img-fluid" alt="">
                     </div>
                 </div>
 
                 <div class="col-lg-3 col-md-4 col-xs-6">
                     <div class="supporter-logo">
-                        <img src="../assets/images/supporters/3.png" class="img-fluid" alt="">
+                        <img src="../assets/images/supporters/digitalOcean.png" class="img-fluid" alt="">
                     </div>
                 </div>
 
                 <div class="col-lg-3 col-md-4 col-xs-6">
                     <div class="supporter-logo">
-                        <img src="../assets/images/supporters/4.png" class="img-fluid" alt="">
+                        <img src="../assets/images/supporters/github.png" class="img-fluid" alt="">
                     </div>
                 </div>
 
                 <div class="col-lg-3 col-md-4 col-xs-6">
                     <div class="supporter-logo">
-                        <img src="../assets/images/supporters/5.png" class="img-fluid" alt="">
+                        <img src="../assets/images/supporters/hackerearth.png" class="img-fluid" alt="">
                     </div>
                 </div>
 
                 <div class="col-lg-3 col-md-4 col-xs-6">
                     <div class="supporter-logo">
-                        <img src="../assets/images/supporters/6.png" class="img-fluid" alt="">
+                        <img src="../assets/images/supporters/hacksociety.png" class="img-fluid" alt="">
                     </div>
                 </div>
 
                 <div class="col-lg-3 col-md-4 col-xs-6">
                     <div class="supporter-logo">
-                        <img src="../assets/images/supporters/7.png" class="img-fluid" alt="">
+                        <img src="../assets/images/supporters/Inkmonk.png" class="img-fluid" alt="">
                     </div>
                 </div>
 
                 <div class="col-lg-3 col-md-4 col-xs-6">
                     <div class="supporter-logo">
-                        <img src="../assets/images/supporters/8.png" class="img-fluid" alt="">
+                        <img src="../assets/images/supporters/jetbrains.png" class="img-fluid" alt="">
                     </div>
                 </div>
+                <div class="col-lg-3 col-md-4 col-xs-6">
+                    <div class="supporter-logo">
+                        <img src="../assets/images/supporters/dottech.png" class="img-fluid" alt="">
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-4 col-xs-6">
+                    <div class="supporter-logo">
+                        <img src="../assets/images/supporters/wolfarmalpha.png" class="img-fluid" alt="">
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-4 col-xs-6">
+                    <div class="supporter-logo">
+                        <img src="../assets/images/supporters/lt61.jpg" class="img-fluid" alt="">
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-4 col-xs-6">
+                    <div class="supporter-logo">
+                        <img src="../assets/images/supporters/un.png" class="img-fluid" alt="">
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-4 col-xs-6">
+                    <div class="supporter-logo">
+                        <img src="../assets/images/supporters/mayfair.jpg" class="img-fluid" alt="">
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-4 col-xs-6">
+                    <div class="supporter-logo">
+                        <img src="../assets/images/supporters/ta.png" class="img-fluid" alt="">
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-4 col-xs-6">
+                    <div class="supporter-logo">
+                        <img src="../assets/images/supporters/lic.png" class="img-fluid" alt="">
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-4 col-xs-6">
+                    <div class="supporter-logo">
+                        <img src="../assets/images/supporters/temp.png" class="img-fluid" alt="">
+                    </div>
+                </div>
+
 
             </div>
 
         </div>
 
     </section><br><br>
-
     <section id="supporters" class="section-with-bg wow fadeInUp">
         <div class="container">
             <div class="section-header">
-                <h2>FOOD</h2>
+                <h2>Our Media Partner</h2>
             </div>
 
-            <div class="row no-gutters supporters-wrap clearfix">
+            <center>
 
                 <div class="col-lg-3 col-md-4 col-xs-6">
                     <div class="supporter-logo">
-                        <img src="../assets/images/supporters/1.png" class="img-fluid" alt="">
+                        <img src="../assets/images/supporters/rourkelaTips.png" class="img-fluid" alt="">
                     </div>
-                </div>
+                </div></center>
 
-                <div class="col-lg-3 col-md-4 col-xs-6">
-                    <div class="supporter-logo">
-                        <img src="../assets/images/supporters/2.png" class="img-fluid" alt="">
-                    </div>
-                </div>
+              </div>
+            </section>
+            <br><br>
 
-                <div class="col-lg-3 col-md-4 col-xs-6">
-                    <div class="supporter-logo">
-                        <img src="../assets/images/supporters/3.png" class="img-fluid" alt="">
-                    </div>
-                </div>
+                <section id="supporters" class="section-with-bg wow fadeInUp">
+                    <div class="container">
+                        <div class="section-header">
+                            <h2>Our Design Partner</h2>
+                        </div>
 
-                <div class="col-lg-3 col-md-4 col-xs-6">
-                    <div class="supporter-logo">
-                        <img src="../assets/images/supporters/4.png" class="img-fluid" alt="">
-                    </div>
-                </div>
+                        <center>
 
-                <div class="col-lg-3 col-md-4 col-xs-6">
-                    <div class="supporter-logo">
-                        <img src="../assets/images/supporters/5.png" class="img-fluid" alt="">
-                    </div>
-                </div>
+                            <div class="col-lg-3 col-md-4 col-xs-6">
+                                <div class="supporter-logo">
+                                    <img src="../assets/images/supporters/dt.png" class="img-fluid" alt="">
+                                </div>
+                            </div></center>
 
-                <div class="col-lg-3 col-md-4 col-xs-6">
-                    <div class="supporter-logo">
-                        <img src="../assets/images/supporters/6.png" class="img-fluid" alt="">
-                    </div>
-                </div>
 
-                <div class="col-lg-3 col-md-4 col-xs-6">
-                    <div class="supporter-logo">
-                        <img src="../assets/images/supporters/7.png" class="img-fluid" alt="">
-                    </div>
-                </div>
 
-                <div class="col-lg-3 col-md-4 col-xs-6">
-                    <div class="supporter-logo">
-                        <img src="../assets/images/supporters/8.png" class="img-fluid" alt="">
-                    </div>
-                </div>
+                             </div>
+                      </section><br><br>
+                      <section id="supporters" class="section-with-bg wow fadeInUp">
+                          <div class="container">
+                              <div class="section-header">
+                                  <h2>Our Photography Partner</h2>
+                              </div>
 
-            </div>
+                              <center>
 
-        </div>
+                                  <div class="col-lg-3 col-md-4 col-xs-6">
+                                      <div class="supporter-logo">
+                                          <img src="../assets/images/supporters/thirdeye.png" class="img-fluid" alt="">
+                                      </div>
+                                  </div></center>
 
-    </section>
+
+
+                                   </div>
+                            </section><br><br>
+                            <section id="supporters" class="section-with-bg wow fadeInUp">
+                                <div class="container">
+                                    <div class="section-header">
+                                        <h2>Our Exhibition Partner</h2>
+                                    </div>
+
+                                    <center>
+
+                                        <div class="col-lg-3 col-md-4 col-xs-6">
+                                            <div class="supporter-logo">
+                                                <img src="../assets/images/supporters/wingfotech.png" class="img-fluid" alt="">
+                                            </div>
+                                        </div></center>
+
+
+
+                                         </div>
+                                  </section><br><br>
+                                  <section id="supporters" class="section-with-bg wow fadeInUp">
+                                      <div class="container">
+                                          <div class="section-header">
+                                              <h2>Our Previous Sponsors</h2>
+                                          </div>
+
+                                          <div class="row no-gutters supporters-wrap clearfix">
+
+                                              <div class="col-lg-3 col-md-4 col-xs-6">
+                                                  <div class="supporter-logo">
+                                                      <img src="../assets/images/supporters/bhubaneswar buzz.png" class="img-fluid" alt="">
+                                                  </div>
+                                              </div>
+
+                                              <div class="col-lg-3 col-md-4 col-xs-6">
+                                                  <div class="supporter-logo">
+                                                      <img src="../assets/images/supporters/coca_cola.png" class="img-fluid" alt="">
+                                                  </div>
+                                              </div>
+
+                                              <div class="col-lg-3 col-md-4 col-xs-6">
+                                                  <div class="supporter-logo">
+                                                      <img src="../assets/images/supporters/facor.jpg" class="img-fluid" alt="">
+                                                  </div>
+                                              </div>
+
+                                              <div class="col-lg-3 col-md-4 col-xs-6">
+                                                  <div class="supporter-logo">
+                                                      <img src="../assets/images/supporters/ims.jpg" class="img-fluid" alt="">
+                                                  </div>
+                                              </div>
+
+                                              <div class="col-lg-3 col-md-4 col-xs-6">
+                                                  <div class="supporter-logo">
+                                                      <img src="../assets/images/supporters/Indian-Oil.jpg" class="img-fluid" alt="">
+                                                  </div>
+                                              </div>
+
+                                              <div class="col-lg-3 col-md-4 col-xs-6">
+                                                  <div class="supporter-logo">
+                                                      <img src="../assets/images/supporters/mayfair.jpg" class="img-fluid" alt="">
+                                                  </div>
+                                              </div>
+
+                                              <div class="col-lg-3 col-md-4 col-xs-6">
+                                                  <div class="supporter-logo">
+                                                      <img src="../assets/images/supporters/mcl.jpg" class="img-fluid" alt="">
+                                                  </div>
+                                              </div>
+
+                                              <div class="col-lg-3 col-md-4 col-xs-6">
+                                                  <div class="supporter-logo">
+                                                      <img src="../assets/images/supporters/nalco.jpg" class="img-fluid" alt="">
+                                                  </div>
+                                              </div>
+                                              <div class="col-lg-3 col-md-4 col-xs-6">
+                                                  <div class="supporter-logo">
+                                                      <img src="../assets/images/supporters/OdishaMining_MI.jpg" class="img-fluid" alt="">
+                                                  </div>
+                                              </div>
+                                              <div class="col-lg-3 col-md-4 col-xs-6">
+                                                  <div class="supporter-logo">
+                                                      <img src="../assets/images/supporters/ovotees.png" class="img-fluid" alt="">
+                                                  </div>
+                                              </div>
+                                              <div class="col-lg-3 col-md-4 col-xs-6">
+                                                  <div class="supporter-logo">
+                                                      <img src="../assets/images/supporters/Radhika-Regency.png" class="img-fluid" alt="">
+                                                  </div>
+                                              </div>
+                                              <div class="col-lg-3 col-md-4 col-xs-6">
+                                                  <div class="supporter-logo">
+                                                      <img src="../assets/images/supporters/radio.png" class="img-fluid" alt="">
+                                                  </div>
+                                              </div>
+                                              <div class="col-lg-3 col-md-4 col-xs-6">
+                                                  <div class="supporter-logo">
+                                                      <img src="../assets/images/supporters/rourkelaTips.png" class="img-fluid" alt="">
+                                                  </div>
+                                              </div>
+                                              <div class="col-lg-3 col-md-4 col-xs-6">
+                                                  <div class="supporter-logo">
+                                                      <img src="../assets/images/supporters/Sambad_logo.jpg" class="img-fluid" alt="">
+                                                  </div>
+                                              </div>
+                                              <div class="col-lg-3 col-md-4 col-xs-6">
+                                                  <div class="supporter-logo">
+                                                      <img src="../assets/images/supporters/sbi-jobs.jpg" class="img-fluid" alt="">
+                                                  </div>
+                                              </div>
+                                              <div class="col-lg-3 col-md-4 col-xs-6">
+                                                  <div class="supporter-logo">
+                                                      <img src="../assets/images/supporters/snapdeal-new-logo-7591.jpg" class="img-fluid" alt="">
+                                                  </div>
+                                              </div>
+                                              <div class="col-lg-3 col-md-4 col-xs-6">
+                                                  <div class="supporter-logo">
+                                                      <img src="../assets/images/supporters/teeshood.png" class="img-fluid" alt="">
+                                                  </div>
+                                              </div>
+                                              <div class="col-lg-3 col-md-4 col-xs-6">
+                                                  <div class="supporter-logo">
+                                                      <img src="../assets/images/supporters/wisdom.png" class="img-fluid" alt="">
+                                                  </div>
+                                              </div>
+
+
+
+
+                                          </div>
+
+                                      </div>
+
+                                  </section><br><br>
+
+
+
+
+
     <footer id="footer">
         <div class="footer-top">
             <div class="container">
