--- a/views/ISRpage.html
+++ b/views/ISRpage.html
@@ -46,7 +46,7 @@
       <div id="logo" class="pull-left">
         <!-- Uncomment below if you prefer to use a text logo -->
         <a href="#intro" class="scrollto"><img src="../assets/images/Innovision_Logo.png" alt="" title="Innovision'19"></a>
-        <!-- <h1><a href="#main"><span>Inno'19</span></a></h1> -->
+        <h1><a href="#main"><span>inno'19</span></a></h1>
       </div>
 
       <nav id="nav-menu-container">
