--- a/views/ISRpage.html
+++ b/views/ISRpage.html
@@ -261,7 +261,7 @@ Hotels Section
         <div class="row">
 
           <div class="col-lg-3 col-md-6 footer-info">
-            <img src="../assets/images/logo.png" alt="TheEvenet">
+            <img src="../assets/images/inno_logo.png" alt="TheEvenet">
             <p>In alias aperiam. Placeat tempore facere. Officiis voluptate ipsam vel eveniet est dolor et totam porro. Perspiciatis ad omnis fugit molestiae recusandae possimus. Aut consectetur id quis. In inventore consequatur ad voluptate
               cupiditate debitis accusamus repellat cumque.</p>
           </div>
@@ -306,6 +306,12 @@ Hotels Section
               <a href="#" class="linkedin"><i class="fa fa-linkedin"></i></a>
             </div>
 
+          </div>
+
+          <div class="col-lg-3 col-md-6 footer-info">
+            <img src="../assets/images/nitrlogo.png" alt="TheEvenet">
+            <p>In alias aperiam. Placeat tempore facere. Officiis voluptate ipsam vel eveniet est dolor et totam porro. Perspiciatis ad omnis fugit molestiae recusandae possimus. Aut consectetur id quis. In inventore consequatur ad voluptate
+              cupiditate debitis accusamus repellat cumque.</p>
           </div>
 
         </div>
