--- a/views/participants-admin/index.html
+++ b/views/participants-admin/index.html
@@ -1,5 +1,5 @@
 <html>
-<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+<link rel="stylesheet" href="../../assets/lib/bootstrap/css/bootstrap.min.css">
 <!-- <link rel="stylesheet" href="stylesheets/style.css"> -->
 <script src="../../assets/lib/jquery/jquery.min.js"></script>
 
@@ -47,35 +47,7 @@
         </div>
     </div>
     </center>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
-    <!--     <script>
-        $(document).on("click", ".submit", function () {
-        	console.log($("#pwd").val());
-            $.ajax({
-                type: "POST",
-                url: "../apis/panels/CASelection/login.php",
-                data: {
-                    username: $("#id").val().toString(),
-                    password: $("#pwd").val().toString()
-                },
-                success: function (data) {
-                    var dataSet = JSON.parse(data);
-                    if(dataSet["status"].localeCompare("success") == 0)
-                    {
-                        localStorage.ca_token = dataSet["result"];
-                        window.location.assign("./campus_ambassador_admin.html");
-                    }
-                    else
-                    {
-                        alert(dataSet["result"]);
-                    }
-                },
-                error: function (data) {
-                    console.log(data);
-                }
-            });
-        });
-    </script> -->
+    <script src="../../assets/lib/bootstrap/js/bootstrap.min.js"></script>
     <script src="../../assets/js/ajax/participants_admin_login.js"></script>
     <script>
         $(document).ready(function() {
