index page new section added.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -691,7 +691,6 @@ body.mobile-nav-active #mobile-nav-toggle {
   position: relative;
   color: #fff;
   padding: 60px 0 40px 0;
-  margin-bottom: 10px;
 }
 
 #about:before {
@@ -1498,33 +1497,43 @@ body.mobile-nav-active #mobile-nav-toggle {
 /* ============ */
 
 #quotes{
-  background-color: rgba(6, 12, 34, 0.8);
+  position: relative;
   text-align: center;
-  padding: 50px;
+  padding: 20px 20px 100px 20px;
 }
 
 #quotes em {
-  color: #fff;
+  color: #a5a9b3;
 }
 
 .quote-text{
-  color: #fff;
+  padding-left: 200px;
+  padding-right: 200px;
+  color: #0e1b4d;
   font-size: 2.5rem;
   line-height: 1.5;
 }
 
 .quote-image{
   margin: 20px;
-  width: 10%;
+  width: 20%;
   border-radius: 40%;
 }
 
+#quotes .play-btn {
+  width: 40%;
+  height: 60px;
+  position: absolute;
+  top: 50%;
+  left: 0;
+}
 
 /* ============ */
 
 /*--------------------------------------------------------------
 # Footer
 --------------------------------------------------------------*/
+
 #footer {
   background: #101522;
   padding: 0 0 25px 0;
@@ -1534,7 +1543,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 
 #footer .footer-top {
   background: #040919;
-  padding: 60px 0 30px 0;
+  padding: 60px 0 40px 0;
 }
 
 #footer .footer-top .footer-info {
@@ -1712,6 +1721,12 @@ body.mobile-nav-active #mobile-nav-toggle {
   #subscribe {
     background-attachment: fixed;
   }
+
+  .quote-text {
+    padding-left: 50px;
+    padding-right: 50px;
+    font-size: 1.8rem;
+  }
 }
 
 @media (max-width: 1199px) {
@@ -1769,6 +1784,32 @@ body.mobile-nav-active #mobile-nav-toggle {
   #faq #faq-list i {
     top: 13px;
   }
+
+  #footer .footer-top .footer-info img {
+    width: 30%;
+    float: left;
+    padding-right: 15px;
+  }
+
+  #quotes .quote-text {
+    padding-left: 20px;
+    padding-right: 20px;
+    font-size: 1.5rem;
+  }
+  #quotes img {
+    width: 20%;
+    margin-top: 0;
+  }
+  #quotes em {
+    font-size: 1rem;
+  }
+
+  #quotes .play-btn{
+    width: 70px;
+    height: 50px;
+    top: 50%;
+    left: 0;
+  }
 }
 
 @media (max-width: 767px) {
@@ -1781,23 +1822,50 @@ body.mobile-nav-active #mobile-nav-toggle {
   #venue .venue-info h3 {
     font-size: 24px;
   }
+
+  .quote-text {
+    padding-left: 50px;
+    padding-right: 50px;
+    font-size: 1.5rem;
+  }
+
+  #quotes img {
+    width: 30%;
+  }
+  #quotes h2 {
+    font-size: 1.3rem;
+  }
+
 }
 
 @media (max-width: 480px) {
   #schedule .nav-tabs a {
     padding: 8px 30px;
   }
+
+  #quotes .quote-text {
+    padding-left: 20px;
+    padding-right: 20px;
+    font-size: 1rem;
+  }
+  #quotes img {
+    width: 58%;
+    margin-top: 0;
+  }
+  #quotes em {
+    font-size: 0.8rem;
+  }
+
+  #quotes .play-btn{
+    width: 60px;
+    height: 50px;
+    top: 50%;
+    left: 0;
+  }
 }
 
 @media (max-width: 460px) {
   #subscribe button {
     margin-top: 10px;
-  }
-
-  #quotes img {
-    width: 50%;
-  }
-  #quotes h2 {
-    font-size: 1.3rem;
   }
 }
