--- a/views/ISRpage.html
+++ b/views/ISRpage.html
@@ -51,8 +51,8 @@
 
       <nav id="nav-menu-container">
         <ul class="nav-menu">
-          <li><a href="#intro">Home</a></li>
-          <li><a href="#about">About</a></li>
+          <li><a href="../index.html">Home</a></li>
+          <li><a href="../index.html#about">About</a></li>
           <li class="dropdown">
 
             <a class="dropbtn dropping">Events</a>
@@ -271,7 +271,7 @@ Hotels Section
             <ul>
               <li><i class="fa fa-angle-right"></i> <a href="#">Home</a></li>
               <li><i class="fa fa-angle-right"></i> <a href="#">About us</a></li>
-              <li><i class="fa fa-angle-right"></i> <a href="#">Services</a></li>
+              <li><i class="fa fa-angle-right"></i> <a href="https://twitter.com/nitrourkela?s=17">NITR Twitter</a></li>
               <li><i class="fa fa-angle-right"></i> <a href="#">Terms of service</a></li>
               <li><i class="fa fa-angle-right"></i> <a href="#">Privacy policy</a></li>
             </ul>
@@ -299,11 +299,11 @@ Hotels Section
             </p>
 
             <div class="social-links">
-              <a href="https://twitter.com/nitrourkela?s=17" class="twitter"><i class="fa fa-twitter"></i></a>
-              <a href="https://www.facebook.com/nitrkl1/" class="facebook"><i class="fa fa-facebook"></i></a>
-              <a href="#" class="instagram"><i class="fa fa-instagram"></i></a>
-              <a href="#" class="google-plus"><i class="fa fa-google-plus"></i></a>
-              <a href="#" class="linkedin"><i class="fa fa-linkedin"></i></a>
+              <a href="https://twitter.com/innonitr?lang=en" class="twitter"><i class="fa fa-twitter"></i></a>
+              <a href="https://www.facebook.com/innonitr/" class="facebook"><i class="fa fa-facebook"></i></a>
+              <a href="https://www.instagram.com/inno.nitr/" class="instagram"><i class="fa fa-instagram"></i></a>
+              <!-- <a href="#" class="google-plus"><i class="fa fa-google-plus"></i></a>
+              <a href="#" class="linkedin"><i class="fa fa-linkedin"></i></a> -->
             </div>
 
           </div>
@@ -311,7 +311,8 @@ Hotels Section
           <div class="col-lg-3 col-md-6 footer-info">
             <img src="../assets/images/nitrlogo.png" alt="TheEvenet">
             <p>In alias aperiam. Placeat tempore facere. Officiis voluptate ipsam vel eveniet est dolor et totam porro. Perspiciatis ad omnis fugit molestiae recusandae possimus. Aut consectetur id quis. In inventore consequatur ad voluptate
-              cupiditate debitis accusamus repellat cumque.</p>
+              cupiditate debitis accusamus repellat cumque.
+            </p>
           </div>
 
         </div>
@@ -329,7 +330,7 @@ Hotels Section
           Licensing information: https://bootstrapmade.com/license/
           Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/buy/?theme=TheEvent
         -->
-        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+        Designed by <a href="#">Innovision Web Team</a>
       </div>
     </div>
   </footer>
@@ -353,6 +354,7 @@ Hotels Section
 
   <!-- Template Main Javascript File -->
   <script src="../assets/js/main.js"></script>
+
 </body>
 
 </html>
