--- a/views/participants-admin/admin_panel.html
+++ b/views/participants-admin/admin_panel.html
@@ -9,11 +9,12 @@
         .x{
             background-color: white; 
             text-align: center;
-            height: 300px;
-            width: 800px;
+            height: 85%;
+            width: 100%;
             border-radius: 5px;
-            margin: 10px;
             box-shadow: 0px 3px 8px rgba(0,0,0,0.25);
+            position: relative;
+            
 
 
         }
@@ -99,10 +100,11 @@
         </div>
     </div>
 
+
     <div class="row">
         <div class="col-sm-2"><button type="button" class="btn btn-info submit_button" style="margin-top: 2em;">Submit</button>
         </div>
-        <div class="col-sm-8"><br><br>
+        <div class="col-sm-8"><br>
             <div class="x">
                 <div class="search" style="margin: 30px;"><br>
                     <input type="email" class="form-control" placeholder="search..">
@@ -113,7 +115,9 @@
                  </div>
             </div>
         </div>
-        <div class="col-sm-2"><button type="button" class="btn btn-info logout_button" style="margin-top: 2em;">Sign Out</button></div>
+
+        <div class="col-sm-2">
+            <button type="button" class="btn btn-info logout_button" style="margin-top: 2em;">Sign Out</button></div>
     </div>
     <!-- <script src="../assets/"></script> -->
     <script>
