--- a/views/event-details.html
+++ b/views/event-details.html
@@ -96,7 +96,7 @@
                     Date : <b id="eid_date"> </b> <br>
                     Time : <b id="eid_time"> </b> <br>
                     Venue : <b id="eid_venue"> </b>  <br>
-                    <div class="event-register register"><a href="#" id="register">Register</a></div>
+                    <div class="event-register register"><a href="#" id="register"></a></div>
                     <!-- register button for events -->
                 </p>
             </div>
