--- a/views/profile.html
+++ b/views/profile.html
@@ -89,15 +89,15 @@
 
                 <div class="col-md-8">
                     <h3 style="color: white;" id="participant_name">Name : Roshan S </h3>
-                    <h3 style="color: white;" id ="participant_email">Email : roshan@gmail.com </h3>
+                    <h3 style="color: white;" id="participant_email">Email : roshan@gmail.com </h3>
                     <h3 style="color: white;" id="participant_college">College : nitr</h3>
-                    <h3 style="color: white;" id = "participant_id"></h3>
+                    <h3 style="color: white;" id="participant_id"></h3>
                     <br><br>
                     <a href="#about" class="about-btn scrollto">&nbsp;&nbsp; PAYMENT &nbsp;&nbsp;</a> <br><br>
                 </div>
                 <div class="col-md-4">
                     <center>
-                        <img id = "qr_image" src=" " style="position: relative;"/ >
+                        <img id="qr_image" src=" " style="position: relative;" />
                     </center>
                 </div>
             </div>
@@ -161,7 +161,7 @@
                       </div>
                 </div>
             -->
-            
+
             </div>
         </div>
     </section>
@@ -255,6 +255,7 @@
     <script src="../assets/lib/wow/wow.min.js"></script>
     <script src="../assets/lib/venobox/venobox.min.js"></script>
     <script src="../assets/lib/owlcarousel/owl.carousel.min.js"></script>
+    <script src="../assets/lib/sweetalert/sweetalert.js"></script>
 
     <!-- Contact Form JavaScript File -->
     <script src="../assets/js/contactform.js"></script>
