--- a/views/login.html
+++ b/views/login.html
@@ -92,8 +92,8 @@
                 </ul>
                 <!-- Schdule Day 1 -->
                 <div role="tabpanel" class="col-lg-7 tab-pane fade show active" id="registration" style="background-color: #0e1735;">
-                    
-                  <div id="error"></div>
+
+                    <div id="error"></div>
                     <form class="form-horizontal" action="" method="post">
                         <div class="form-group">
                             <label class="control-label col-sm-6" for="Name" style="color:white;">Name:</label>
@@ -147,19 +147,19 @@
                         </div>
                         <div class="form-group" style="color:white" id="gender">
                             <label class="control-label col-sm-2" for="Gender" style="color:white">Gender:</label>
-                            <form > 
+                            <form>
                                 <label> 
                                     <input type="radio" name="gen" value="male"> &nbsp; Male &nbsp; 
-                                </label> 
+                                </label>
                                 <label> 
                                     <input type="radio" name="gen" value="female"> &nbsp; Female &nbsp; 
-                                </label> 
+                                </label>
                                 <label> 
                                     <input type="radio" name="gen" value="others"> &nbsp; Other &nbsp; 
-                                </label> 
-                            </form> 
+                                </label>
+                            </form>
                         </div>
-                       
+
                         <div class="form-group">
                             <label class="control-label col-sm-6" for="email" style="color:white">Password:</label>
                             <div class="col-sm-12">
@@ -192,36 +192,35 @@
 
                 <!-- Schdule Day 2 -->
                 <div role="tabpanel" class="col-lg-7  tab-pane fade" id="login" style="background-color: #0e1735;" align="center">
-                        <div id="error1"></div>
-                        <div class="form-group">
-                            <label class="control-label col-sm-2" for="email" style="color:white">Email:</label>
-                            <div class="col-sm-12">
+                    <div id="error1"></div>
+                    <div class="form-group">
+                        <label class="control-label col-sm-2" for="email" style="color:white">Email:</label>
+                        <div class="col-sm-12">
 
-                                <input type="email" class="form-control" id="login_email" placeholder="Enter email" name="email">
-
-                            </div>
-                        </div>
-
-                        <div class="form-group">
-                            <label class="control-label col-sm-2" for="pwd" style="color:white">Password:</label>
-                            <div class="col-sm-12">
-
-                                <input type="password" class="form-control" id="login_password" placeholder="Enter password" name="password">
-
-                            </div>
-                        </div>
-
-
-                        <div class="form-group">
-                            <div class="col-sm-offset-2 col-sm-12" align="center">
-
-                                <!--<a href="#about" class="about-btn scrollto">&nbsp;&nbsp; SUBMIT&nbsp;&nbsp;</a> <br>-->
-                                <button id="login_button" class="about-btn scrollto">&nbsp;&nbsp; SUBMIT&nbsp;&nbsp;</button>
-                                
-
-                            </div>
+                            <input type="email" class="form-control" id="login_email" placeholder="Enter email" name="email">
 
                         </div>
+                    </div>
+
+                    <div class="form-group">
+                        <label class="control-label col-sm-2" for="pwd" style="color:white">Password:</label>
+                        <div class="col-sm-12">
+
+                            <input type="password" class="form-control" id="login_password" placeholder="Enter password" name="password">
+
+                        </div>
+                    </div>
+
+
+                    <div class="form-group">
+                        <div class="col-sm-offset-2 col-sm-12" align="center">
+
+                            <!--<a href="#about" class="about-btn scrollto">&nbsp;&nbsp; SUBMIT&nbsp;&nbsp;</a> <br>-->
+                            <button id="login_button" class="about-btn scrollto">&nbsp;&nbsp; SUBMIT&nbsp;&nbsp;</button>
+                            <button id="forgot_password" class="about-btn scrollto">&nbsp;&nbsp; FORGOT PASSWORD&nbsp;&nbsp;</button>
+                        </div>
+
+                    </div>
 
                 </div>
                 <!-- End Schdule Day 2 -->
@@ -307,7 +306,7 @@
     </footer>
     <!-- #footer -->
 
-  
+
 
 
     <a href="#" class="back-to-top"><i class="fa fa-angle-up"></i></a>
@@ -327,9 +326,10 @@
 
     <!-- Template Main Javascript File -->
     <script src="../assets/js/main.js"></script>
-    <script src= "https://code.jquery.com/jquery-2.2.4.min.js"></script>
+    <script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
     <script src="../assets/js/sweetalert.js"></script>
-     <script src="../assets/js/ajax/login_registration.js"> </script>
+    <script src="../assets/js/ajax/login_registration.js">
+    </script>
 </body>
 
 </html>
