--- a/views/FAQ.html
+++ b/views/FAQ.html
@@ -36,23 +36,35 @@
             <div id="logo" class="pull-left">
                 <!-- Uncomment below if you prefer to use a text logo -->
                 <!-- <h1><a href="#main">C<span>o</span>nf</a></h1>-->
-                <a href="#intro" class="scrollto"><img src="../assets/images/logo.png" alt="" title=""></a>
+                <a href="#intro" class="scrollto"><img src="../assets/images/Innovision_Logo.png" alt="" title="Innovision-19"></a>
+                 <h1><a href="#main"><span>inno'19</span></a></h1>
             </div>
 
-            <nav id="nav-menu-container">
-                <ul class="nav-menu">
-                    <li class="menu-active"><a href="#intro">Home</a></li>
-                    <li><a href="#about">About</a></li>
-                    <li><a href="#speakers">Speakers</a></li>
-                    <li><a href="#schedule">Schedule</a></li>
-                    <li><a href="#venue">Venue</a></li>
-                    <li><a href="#hotels">Hotels</a></li>
-                    <li><a href="#gallery">Gallery</a></li>
-                    <li><a href="#supporters">Sponsors</a></li>
-                    <li><a href="#contact">Contact</a></li>
-                    <li class="buy-tickets"><a href="#buy-tickets">Buy Tickets</a></li>
-                </ul>
-            </nav>
+                <nav id="nav-menu-container">
+        <ul class="nav-menu">
+          <li><a href="../index.html">Home</a></li>
+          <li><a href="../index.html#about">About</a></li>
+          <li class="dropdown">
+
+            <a class="dropbtn dropping">Events</a>
+            <div class="dropdown-content">
+              <a href="eventsSection.html#EventsSection">Event Schedule</a>
+              <a href="eventsSection.html#Events">Events</a>
+              <a href="eventsSection.html#Workshops">Workshops</a>
+              <a href="eventsSection.html#Paid-Workshops">Paid-Workshops</a>
+              <a href="eventsSection.html#Cultural">Cultural</a>
+            </div>
+
+          </li>
+          <li ><a href="#">Innovision Social Regime</a></li>
+          <li class="menu-active"><a href="FAQ.html">FAQ</a></li>
+          <!-- <li><a href="#hotels">Hotels</a></li>
+                  <li><a href="#gallery">Gallery</a></li> -->
+          <li><a href="sponsor.html">Sponsors</a></li>
+          <li><a href="#contact">Contact</a></li>
+          <li class="buy-tickets"><a href="login.html">Login/Register</a></li>
+        </ul>
+      </nav>
             <!-- #nav-menu-container -->
         </div>
     </header>
