--- a/views/profile.html
+++ b/views/profile.html
@@ -88,12 +88,13 @@
             <div class="row" style="text-align: center;">
 
                 <div class="col-md-8">
-                    <h3 style="color: white;" id="participant_name">Name : Roshan S </h3>
-                    <h3 style="color: white;" id ="participant_email">Email : roshan@gmail.com </h3>
-                    <h3 style="color: white;" id="participant_college">College : nitr</h3>
+                    <h3 style="color: white;" id="participant_name"></h3>
+                    <h3 style="color: white;" id ="participant_email"></h3>
+                    <h3 style="color: white;" id="participant_college"></h3>
                     <h3 style="color: white;" id = "participant_id"></h3>
                     <br><br>
                     <a href="#about" class="about-btn scrollto">&nbsp;&nbsp; PAYMENT &nbsp;&nbsp;</a> <br><br>
+                    <button  class="about-btn" style="background-color: black;" id = "ca_button1">&nbsp; VIEW OR EDIT YOUR CA PROFILE &nbsp;</button>
                 </div>
                 <div class="col-md-4">
                     <center>
