--- a/views/event/admin/manage_events.html
+++ b/views/event/admin/manage_events.html
@@ -1,5 +1,5 @@
 <html>
-<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+<link rel="stylesheet" href="../../../assets/lib/bootstrap/css/bootstrap.min.css">
 <link rel="stylesheet" href="../../../assets/css/style.css">
 <script src="../../../assets/lib/jquery/jquery.min.js"></script>
 
@@ -157,7 +157,7 @@
 
 
 
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <script src="../../../assets/lib/bootstrap/js/bootstrap.min.js"></script>
     <script src="../../../assets/lib/sweetalert/sweetalert.js"></script>
     <script src="../../../assets/js/ajax/manageEvents.js"></script>
     <script src="../../../assets/js/ajax/createEvent.js"></script>
